[package]
name = "rung_cam"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.6", features = ["derive"] }
opencv = "0.85.1"
serde = { version = "1.0.188", features = ["derive"] }
serde_yaml = "0.9.25"
